--- a/Fundraising/wwwroot/layout/layout.css
+++ b/Fundraising/wwwroot/layout/layout.css
@@ -1,107 +1,223 @@
 /* header */
+body {
+    background-color: #ededed !important;
+}
 
 #header {
-  font-family: "Noto Noto Sans TC" !important;
-  height: 80px;
-  /* box-shadow: 0 5px 40px rgba(159, 162, 177, .4); */
+    font-family: 'Noto Noto Sans TC' !important;
+    height: 65px;
+    margin-bottom: 15px;
 }
 
-#header-items a:hover {
-  color: #047c51 !important;
-}
 
-/* .navbar {
-    position: relative;
+/* #header-items a:hover {
+    color: #047c51 !important;
 } */
 
+#linkbar ul li {
+    list-style: none;
+}
+
+#linkbar ul li a {
+    position: relative;
+    text-decoration: none;
+    font-size: 20px;
+    color: #333;
+    letter-spacing: 0.1em;
+    font-weight: 500;
+}
+
+#linkbar ul li a::before {
+    content: '';
+    position: absolute;
+    bottom: 5px;
+    width: 45px;
+    height: 3px;
+    background: #047c51;
+    transform: scaleX(0);
+    transition: transform 0.5s ease-in-out;
+    transform-origin: right;
+}
+
+#linkbar ul li a:hover::before {
+    transform: scaleX(1);
+    transform-origin: left;
+}
+
 #header-brand {
-  position: absolute;
-  left: 50%;
-  /* margin-left: -100px !important; */
-  transform: translateX(-50%);
-  display: block;
+    position: absolute;
+    left: 50%;
+    transform: translateX(-50%);
+    display: block;
 }
 
 #header-container {
-  position: relative;
-  margin-left: 5%;
-  margin-right: 5%;
+    position: relative;
+    margin-left: 15%;
+    margin-right: 15%;
 }
 
-#header-search {
-  text-decoration: none;
-  margin-right: 35px;
-  color: rgb(79, 79, 79);
+/* searchbar */
+
+.search {
+    position: relative;
+    width: 35px;
+    height: 35px;
+    background-color: #fff;
+    border-radius: 60px;
+    transition: 0.5s;
+    overflow: hidden;
 }
 
-#header-login {
-  text-decoration: none;
-  margin-right: 35px;
-  color: rgb(79, 79, 79);
+.search.active {
+    width: 200px;
+    background: #eeeeee;
 }
 
-#header-login:hover {
-  color: #047c51 !important;
+.search .icon.active {
+    background: #eeeeee;
 }
 
-#header-home {
-  color: black;
+.search .icon {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 35px;
+    height: 35px;
+    background: #fff;
+    border-radius: 60px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    z-index: 1000;
+    cursor: pointer;
 }
 
-.nav-item {
-  padding: 10px;
+.search .icon::before {
+    content: '';
+    position: absolute;
+    width: 14px;
+    height: 14px;
+    border: 2px solid black;
+    border-radius: 50%;
+    transform: translate(-3px, -3px);
 }
+
+.search .icon::after {
+    content: '';
+    position: absolute;
+    width: 3px;
+    height: 8px;
+    background: black;
+    transform: translate(5px, 5px)rotate(315deg);
+}
+
+.search .input {
+    position: relative;
+    width: 200px;
+    height: 35px;
+    left: 35px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.search .input input {
+    position: absolute;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    border: none;
+    outline: navajowhite;
+    font-size: 16px;
+    padding: 10px 2px;
+    background-color: #eeeeee;
+}
+
+.clear {
+    position: absolute;
+    top: 50%;
+    transform: translateY(-50%);
+    width: 15px;
+    height: 15px;
+    right: 15px;
+    cursor: pointer;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.clear::before {
+    position: absolute;
+    content: '';
+    width: 1px;
+    height: 15px;
+    background: #999;
+    transform: rotate(45deg);
+}
+
+.clear::after {
+    position: absolute;
+    content: '';
+    width: 1px;
+    height: 15px;
+    background: #999;
+    transform: rotate(315deg);
+}
+
+
+
 
 /* footer */
 footer {
-  font-family: "Montserrat", "Noto Sans TC", sans-serif !important;
-  margin-top: 100px;
+    font-family: 'Montserrat', 'Noto Sans TC', sans-serif !important;
+    margin-top: 100px;
 }
 
 #footer-container h4 {
-  font-size: 16px !important;
+    font-size: 16px !important;
 }
 
 #footer-container p {
-  font-size: 12px !important;
-  cursor: pointer;
+    font-size: 12px !important;
+    cursor: pointer;
 }
 
-#footer-container p:hover {
-  color: #047c51;
-}
 
 #footer-text {
-  margin-left: 20%;
-  margin-right: 20%;
+    margin-left: 20%;
+    margin-right: 20%;
+}
+
+#footer-text h4,p {
+    color: #fff;
+    cursor: pointer;
 }
 
 .copyright {
-  margin-left: 20%;
+    margin-left: 20%;
 }
 
 #connect-list {
-  margin-right: 65%;
+    margin-right: 55%;
 }
 
-/* Nick */
+
+/* membercentre */
+.memberlink {
+    font-size: 16px;
+}
+
 .memberlink:focus {
-  box-shadow: none;
+    box-shadow: none;
 }
+
 .memberlink:hover {
-  color: #047c51;
+    color: #047c51;
 }
+
 body {
-  background-color: #f8f4ea;
+    background-color: #f1f1f1;
 }
-#MemberCentre {
-  background-color: #f1f1f1;
-}
-.card {
-  box-shadow: 0 1px 2px 0 rgb(0 0 0 / 10%);
-  width: 80%;
-  transition: 0.5s;
-  border: 0;
-  border-radius: 0.55rem;
-  position: relative;
-}
+
+/* Member Dropdown */
