--- a/Fundraising/wwwroot/layout/layout.css
+++ b/Fundraising/wwwroot/layout/layout.css
@@ -62,8 +62,8 @@ body {
 
 #header-container {
     position: relative;
-    margin-left: 15%;
-    margin-right: 15%;
+    margin-left: 10%;
+    margin-right: 10%;
 }
 
 /* Login */
@@ -108,7 +108,7 @@ body {
     width: 35px;
     height: 35px;
     background-color: transparent;
-    border-radius: 0px 0px 0px 0px;
+    border-radius: 0px 0px 0px 15px;
     transition: 0.5s;
     overflow: hidden;
 }
@@ -124,9 +124,9 @@ body {
     border-bottom: solid 2px #047c51;
 }
 
-.search .icon:hover {
+/* .search .icon:hover {
     background: #047c51;
-}
+} */
 
 .search .icon {
     position: absolute;
@@ -134,7 +134,7 @@ body {
     left: 0;
     width: 35px;
     height: 35px;
-    background: #fff;
+    background: #047c51;
     border-radius: 60px;
     display: flex;
     justify-content: center;
@@ -148,12 +148,12 @@ body {
     position: absolute;
     width: 14px;
     height: 14px;
-    border: 3px solid black;
+    border: 3px solid white;
     border-radius: 50%;
     transform: translate(-3px, -3px);
 }
 
-.search .icon:hover:before {
+/* .search .icon:hover:before {
     content: '';
     position: absolute;
     width: 14px;
@@ -161,18 +161,9 @@ body {
     border: 3px solid white;
     border-radius: 50%;
     transform: translate(-3px, -3px);
-}
+} */
 
 .search .icon::after {
-    content: '';
-    position: absolute;
-    width: 3px;
-    height: 8px;
-    background: black;
-    transform: translate(5px, 5px)rotate(315deg);
-}
-
-.search .icon:hover:after {
     content: '';
     position: absolute;
     width: 3px;
@@ -180,6 +171,15 @@ body {
     background: white;
     transform: translate(5px, 5px)rotate(315deg);
 }
+
+/* .search .icon:hover:after {
+    content: '';
+    position: absolute;
+    width: 3px;
+    height: 8px;
+    background: white;
+    transform: translate(5px, 5px)rotate(315deg);
+} */
 
 .search .input {
     position: relative;
