layout登入頭像變更

--- a/Fundraising/wwwroot/layout/layout.css
+++ b/Fundraising/wwwroot/layout/layout.css
@@ -74,6 +74,9 @@ body {
 .loginicon {
     position: relative;
     bottom: 4.5px;
+    /* width: 30px;
+    height: 30px;
+    border-radius: 15px; */
 }
 
 .dropdown-menu{
