--- a/Fundraising/wwwroot/Proposal/proposal.css
+++ b/Fundraising/wwwroot/Proposal/proposal.css
@@ -12,10 +12,10 @@ body {
     font-family: sans-serif;
 }
 
-body ul,
-body li {
-    background-color: transparent !important;
-}
+    body ul,
+    body li {
+        background-color: transparent !important;
+    }
 
 form span,
 form p {
@@ -89,21 +89,21 @@ input::-webkit-inner-spin-button {
     width: 550px;
 }
 
-.file input {
-    position: absolute;
-    font-size: 100px;
-    right: 0;
-    top: 0;
-    opacity: 0;
-}
+    .file input {
+        position: absolute;
+        font-size: 100px;
+        right: 0;
+        top: 0;
+        opacity: 0;
+    }
 
-.file:hover {
-    background: #047c51;
-    border-color: #047c51;
-    color: white;
-    text-decoration: none;
-    cursor: pointer;
-}
+    .file:hover {
+        background: #047c51;
+        border-color: #047c51;
+        color: white;
+        text-decoration: none;
+        cursor: pointer;
+    }
 
 .file2 {
     position: relative;
@@ -116,21 +116,21 @@ input::-webkit-inner-spin-button {
     text-indent: 0;
 }
 
-.file2 input {
-    position: absolute;
-    font-size: 100px;
-    right: 0;
-    top: 0;
-    opacity: 0;
-}
+    .file2 input {
+        position: absolute;
+        font-size: 100px;
+        right: 0;
+        top: 0;
+        opacity: 0;
+    }
 
-.file2:hover {
-    background: #047c51;
-    border-color: #047c51;
-    color: white;
-    text-decoration: none;
-    cursor: pointer;
-}
+    .file2:hover {
+        background: #047c51;
+        border-color: #047c51;
+        color: white;
+        text-decoration: none;
+        cursor: pointer;
+    }
 
 /* .ProductContenthiddeninput{
     position: absolute;
@@ -159,10 +159,15 @@ input::-webkit-inner-spin-button {
     width: 12vh;
 }
 
-.pagebtn:hover {
-    background-color: #047c51;
-    color: white;
-}
+    .pagebtn:active {
+        background-color: #047c51 !important;
+        color: white !important;
+    }
+
+    .pagebtn:hover {
+        background-color: #047c51;
+        color: white;
+    }
 
 /* 文字編輯器 */
 #container {
@@ -176,7 +181,6 @@ input::-webkit-inner-spin-button {
 }
 
 .ck-editor__editable[role="toolbox"] {
-
     background-color: black !important;
 }
 
@@ -194,16 +198,21 @@ input::-webkit-inner-spin-button {
 
 .QAaddbtn,
 .QAdelbtn {
-
     border-radius: 0;
     border: #047c51 solid 2px;
     background-color: transparent;
-    color: black
+    color: black;
 }
 
-.QAaddbtn:hover,
-.QAdelbtn:hover {
-    background-color: #047c51;
-    border: #047c51 solid 2px;
-    color: white
-}
+    .QAaddbtn:active,
+    .QAdelbtn:active {
+        background-color: #047c51 !important;
+        color: white !important;
+    }
+
+    .QAaddbtn:hover,
+    .QAdelbtn:hover {
+        background-color: #047c51;
+        border: #047c51 solid 2px;
+        color: white;
+    }
