--- a/Fundraising/wwwroot/layout/layout.css
+++ b/Fundraising/wwwroot/layout/layout.css
@@ -279,6 +279,10 @@ footer {
     cursor: pointer;
 }
 
+.footertext{
+    width:100%;
+}
+
 /* membercentre */
 .memberlink {
     font-size: 16px;
