--- a/Fundraising/wwwroot/MemberCentre/message.css
+++ b/Fundraising/wwwroot/MemberCentre/message.css
@@ -232,33 +232,16 @@
   }
 }
 
-@media only screen and (min-width: 768px) and (max-width: 992px) {
-  .chat-app .chat-list {
-    height: 650px;
-    overflow-x: auto;
-  }
-  .chat-app .chat-history {
-    height: 600px;
-    overflow-x: auto;
-  }
-}
-
-@media only screen and (min-device-width: 768px) and (max-device-width: 1024px) and (orientation: landscape) and (-webkit-min-device-pixel-ratio: 1) {
-  .chat-app .chat-list {
-    height: 480px;
-    overflow-x: auto;
-  }
-  .chat-app .chat-history {
-    height: calc(100vh - 350px);
-    overflow-x: auto;
-  }
-}
-
 .chat-app .chat-list {
-  height: calc(66vh);
+  height: calc(64vh);
   overflow-x: auto;
 }
 .chat-app .chat-history {
-  height: calc(55vh);
+  height: calc(50vh);
   overflow-x: auto;
+}
+
+.chat-input,
+.chat-header {
+  visibility: hidden;
 }
