--- a/Fundraising/wwwroot/MemberCentre/message.css
+++ b/Fundraising/wwwroot/MemberCentre/message.css
@@ -67,6 +67,13 @@
   font-size: 13px;
 }
 
+.status p {
+  width: 135px;
+  overflow: hidden;
+  white-space: nowrap;
+  text-overflow: ellipsis;
+}
+
 .chat .chat-header {
   padding: 15px 20px;
   border-bottom: 2px solid #f4f7f6;
