--- a/Fundraising/wwwroot/layout/layout.css
+++ b/Fundraising/wwwroot/layout/layout.css
@@ -332,3 +332,11 @@ footer {
   list-style: none;
   background-color: #e6e5e5;
 }
+.card {
+    box-shadow: 0 1px 2px 0 rgb(0 0 0 / 10%);
+    width: 80%;
+    transition: 0.5s;
+    border: 0;
+    border-radius: 0.55rem;
+    position: relative;
+}
